[gd_scene load_steps=5 format=3 uid="uid://d0xclh3ed438d"]

[ext_resource type="Script" uid="uid://clvusr8160oti" path="res://Scripts/UI/game_over_ui.gd" id="1_0f7hw"]
[ext_resource type="FontFile" uid="uid://bhre85bcv1437" path="res://Assets/Font/PixelOperator8-Bold.ttf" id="1_ujand"]
[ext_resource type="FontFile" uid="uid://ceg0ttv5rstj5" path="res://Assets/Font/PixelOperator8.ttf" id="2_0f7hw"]
[ext_resource type="Script" uid="uid://b3hk8tkerws6n" path="res://Scripts/UI/ui_button_animations.gd" id="4_oqm04"]

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_0f7hw")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7137255)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.51900005
anchor_top = 0.5
anchor_right = 0.51900005
anchor_bottom = 0.5
offset_left = -179.88806
offset_top = -173.0
offset_right = 179.11194
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ujand")
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0f7hw")
theme_override_font_sizes/font_size = 32
text = "RESTART"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0f7hw")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="ButtonAnimations" type="Node" parent="VBoxContainer"]
script = ExtResource("4_oqm04")
